# gafaelfawr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  COPYRIGHT  Dockerfile  LICENSE  Makefile  README.md  README.rst  alembic.ini  docker-compose.yaml  docker_deploy.sh  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependencies.yaml  docker.yaml  docs.yaml  linkcheck.yaml  periodic-ci.yaml  periodic.yaml
alembic/: README.md  env.py  gafaelfawr.yaml
alembic/versions/: 20240209_2309_5c28ed7092c2_initial_schema.py  20240209_2310_2feb306dd1ee_add_oidc_token_type.py
authorizer/: __init__.py  app.py  authnz.py  config.py  lsst.py  token.py  tokens.py  wsgi.py
authorizer/templates/: token.html
changelog.d/: 20230413_073059_rra_DM_38414.md  20230413_120335_rra_DM_38414a.md  20230413_123131_rra_DM_38414a.md  20230414_125547_rra_DM_38414.md  20230414_130832_rra_DM_38414.md  20230414_141517_rra_DM_38414.md  20230417_153059_rra_DM_38414.md  20230418_091146_rra_DM_38747.md  20230515_120829_rra_DM_39186.md  20230515_152805_rra_DM_39186.md  20230601_104058_rra_DM_39486.md  20230601_142330_rra_DM_39486.md  20230605_084645_rra_DM_39519.md  20230726_094301_rra_helm_docs.md  20230830_124127_rra_DM_40567a.md  20230830_145513_rra_DM_40567b.md  20230914_164200_rra_DM_40744.md  20231002_161626_rra_DM_23878.md  20231003_151919_rra_DM_23878.md  20231006_082903_rra_DM_41075.md  20231006_083302_rra_DM_41075.md  20231006_141539_rra_DM_41090.md  20231013_131313_rra_DM_41186.md  20231027_101349_rra_DM_41424.md  20231027_125137_rra_DM_41424.md  20231204_142753_rra_DM_41998.md  20231204_144736_rra_DM_41998.md  20231208_105820_rra_DM_42093.md  20240110_125829_rra_DM_42384.md  20240111_164048_rra_DM_42384.md  20240117_152943_rra_DM_42384.md  20240123_163221_rra_DM_42384.md  20240209_160742_rra_DM_42384.md  20240213_170118_rra_DM_42384a.md  20240214_133634_rra_DM_42384.md  20240214_185441_rra_DM_42384.md  20240216_083628_rra_DM_42930.md  20240222_115317_rra_DM_42384.md  20240312_180104_rra_DM_43288.md  20240313_102609_rra_DM_43288a.md  (+89 more)
client/: README.md  noxfile.py  pyproject.toml
client/src/rubin/gafaelfawr/: __init__.py  _client.py  _constants.py  _dependencies.py  _exceptions.py  _mock.py  _models.py  _tokens.py
client/tests/: client_test.py  conftest.py  dependencies_test.py  mock_test.py  models_test.py  tokens_test.py
client/tests/data/: discovery.json
client/tests/data/userinfo/: otheruser.json  someuser.json
client/tests/support/: data.py
crds/: README.md  ingress.yaml
docs/: _rst_epilog.rst  api.rst  applications.rst  cli.rst  conf.py  configuration.rst  documenteer.toml  glossary.rst  index.rst  install.rst  kubernetes.rst  logging.rst
docs/_static/: architecture.py  flow-oidc.diag  flow.diag
docs/api/: client.rst  index.rst
docs/arch/: configuration.rst  flow.rst  internals.rst  issuer.rst  overview.rst  providers.rst  references.rst  routes.rst  scopes.rst  security.rst  session.rst  storage.rst
docs/dev/: architecture.py  configuration.rst  development.rst  glossary.rst  index.rst  internals.rst  kubernetes.rst  logging.rst  overview.rst  providers.rst  release.rst  requirements.rst  scopes.rst  userinfo.rst
docs/operations/: cli.rst  helm.rst  index.rst  logging.rst  metrics.rst  provider.rst  secrets.rst
docs/user-guide/: administrators.rst  cli.rst  client.rst  cors.rst  gafaelfawringress.rst  gms.rst  headers.rst  helm.rst  index.rst  ingress-overview.rst  ingress.rst  logging.rst  manual-ingress.rst  metrics.rst  mock.rst  openid-connect.rst  prerequisites.rst  provider.rst  quotas.rst  secrets.rst  service-tokens.rst
example/: authorizer.cfg  authorizer.yaml  dev.yaml  k8s.yml
example/secrets/: issuer-key
examples/: gafaelfawr-dev.yaml  gafaelfawr-github.yaml  gafaelfawr-oidc.yaml  gafaelfawr.yaml
examples/docker/: docker-compose.yaml  gafaelfawr.yaml
examples/secrets/: README.md  bootstrap-token  oidc-clients.json  redis-password  session-secret
kube/lsst-lsp-int/: create-configmaps.sh  create-secrets.sh  jwks.json  jwt-authorizer.yaml  oauth2-proxy.yaml  well-known.yaml
kube/template/: README.md  init.sh
requirements/: dev.in  dev.txt  main.in  main.txt  tox.in  tox.txt
rootfs/app/: .gitignore  uwsgi.ini
scripts/: install-base-packages.sh  install-dependency-packages.sh  prestart.sh  start.sh  update-uv-version.sh
src/authorizer/: app.py  authnz.py  config.py  defaults.yaml  tokens.py  wsgi.py
src/gafaelfawr/: __init__.py  app.py  auth.py  cache.py  cli.py  config.py  constants.py  database.py  defaults.yaml  dependencies.py  events.py  exceptions.py  factory.py  issuer.py  keypair.py  logging.py  main.py  metrics.py  oidc.py  pydantic.py  route.py  sentry.py  session.py  settings.py  slack.py  templates.py  token_cache.py  token_store.py  tokens.py  types.py  util.py  verify.py  x_forwarded.py
src/jwt_authorizer/: __init__.py  analyze.py  app.py  authnz.py  cli.py  config.py  constants.py  defaults.yaml  factory.py  issuer.py  keypair.py  providers.py  session.py  token_store.py  tokens.py  util.py  verify.py  wsgi.py
tests/: analyze_test.py  app_auth_test.py  app_test.py  app_tokens_handle_test.py  app_tokens_new_test.py  app_tokens_test.py  authnz_test.py  cli_test.py  client_test.py  config_test.py  conftest.py  database_test.py  gafaelfawr_test.py  issuer_test.py  jwt_authorizer_test.py  keypair_test.py  main_test.py  oidc_test.py  schema_test.py  session_test.py  settings_test.py  setup.py  slack_test.py  test_authnz.py  token_cache_test.py  tokens_test.py  util.py  util_test.py  verify_test.py  x_forwarded_test.py
tests/config/: README.md  oidc-gid.yaml.in  oidc-ldap-gid.yaml.in  oidc-ldap-uid.yaml.in  oidc.yaml.in
tests/crds/: service-token.yaml
tests/data/: discovery.json
tests/dependencies/: redis_test.py
tests/fastapi/: analyze_test.py  auth_logging_test.py  auth_test.py  index_test.py  influxdb_test.py  (+7 more)
ui/: gatsby-config.js  gatsby-node.js  package-lock.json  package.json
(+348 files in other folders)
