[metadata]
name = jwt_authorizer
description = A JWT Authorizer written in Python for auth_request patterns
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/lsst/jwt_authorizer
project_urls =
    Change log = https://github.com/sqre/jwt_authorizer/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst/jwt_authorizer
    Issue tracker = https://github.com/lsst/jwt_authorizer/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jwt_authorizer = jwt_authorizer.cli:main

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
