[metadata]
name = gafaelfawr
description = Token-based authentication and authorization system
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://gafaelfawr.lsst.io/
project_urls =
    Change log = https://github.com/sqre/gafaelfawr/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/gafaelfawr
    Issue tracker = https://github.com/lsst-sqre/gafaelfawr/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gafaelfawr = gafaelfawr.cli:main

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
plugins = sqlalchemy.ext.mypy.plugin
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
