[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "rubin-gafaelfawr"
description = "Client for Gafaelfawr authentication and identity service."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.1,<7",
    "fastapi>=0.100,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "rubin-repertoire>=0.6,<1",
    "safir>=4,<15",
    "structlog>24",
]
dynamic = ["version"]

[[project.authors]]
name = "Association of Universities for Research in Astronomy, Inc. (AURA)"
email = "sqre-admin@lists.lsst.org"

[project.urls]
Homepage = "https://gafaelfawr.lsst.io"
Source = "https://github.com/lsst-sqre/gafaelfawr"
"Change log" = "https://gafaelfawr.lsst.io/changelog.html"
"Issue tracker" = "https://github.com/lsst-sqre/gafaelfawr/issues"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "asgi-lifespan",
    "coverage[toml]",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "pytest-sugar>=1",
    "respx>=0.22",
]
nox = [
    "nox",
    "nox-uv",
]
typing = [
    "mypy>=1.19",
    "types-cachetools>=5.5",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["rubin/gafaelfawr"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "deprecated",
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "redundant-expr",
    "redundant-self",
    "truthy-iterable",
    "unused-awaitable",
]
ignore_missing_imports = true
local_partial_types = true
plugins = ["pydantic.mypy"]
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
filterwarnings = [
    # dataclases-avroschema hasn't been fully updated for Python 3.14
    "ignore:.*Core Pydantic V1 functionality.*:UserWarning",
    "ignore:.*'_UnionGenericAlias' is deprecated.*:DeprecationWarning",
    # testcontainers hasn't updated all of the community modules
    "ignore:.*wait_container_is_ready decorator.*:DeprecationWarning",
]
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests. We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = [
    "src/rubin/gafaelfawr/_mock.py",
    "tests/*.py",
    "tests/*/*.py",
]

[tool.setuptools_scm]
root = ".."

[tool.uv]
required-environments = [
    "sys_platform == 'manylinux' and platform_machine == 'x86_64'",
    "sys_platform == 'manylinux' and platform_machine == 'aarch64'",
]
